fix css overflow

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
      margin: 0;
      padding: 0.5vh;
      font-family: sans-serif;
+	 overflow:hidden;
  }
 
  #wrapper {
